--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
     <header class="header">
         <img src="./images/header__image.svg" class="header__logo" alt="Логотип">
-        <img src="./images/Line.jpg" class="header__line" alt="Линия">
+
     </header>
     <main class="content">
         <section class="profile">
@@ -23,7 +23,7 @@
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <button class="profile__add-button"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements">
             <div class="element">
@@ -77,19 +77,16 @@
     </footer>
     <div class="popup">
         <div class="popup__container">
-            <div class="popup__body">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <form action="#">
-                    <input type="text" placeholder="Имя" class="popup__name">
-                    <input type="text" placeholder="Профессия" class="popup__job">
-                    <button type="submit" class="popup__button">Сохранить</button>
-                </form>
-                <div class="popup__close"></div>
-
-            </div>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <form action="#" name="profile-form">
+                <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="popup-name">
+                <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job" name="popup-job">
+                <button type="submit" class="popup__button">Сохранить</button>
+            </form>
+            <button type="button" class="popup__close"></button>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
