--- a/index.html
+++ b/index.html
@@ -19,53 +19,53 @@
             <div class="profile__info">
                 <div class="profile__name">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button type="button" class="profile__edit-button"></button>
+                    <button type="button" class="profile__edit-button" aria-label="Редактировать профиль"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
-            <button type="button" class="profile__add-button"></button>
+            <button type="button" class="profile__add-button" aria-label="Добавить фотографии"></button>
         </section>
         <section class="elements">
             <div class="element">
                 <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
                 <div class="element__group">
                     <h2 class="element__text">Карачаевск</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                 <div class="element__group">
                     <h2 class="element__text">Гора Эльбрус</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__text">Домбай</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="./images/elbrus.jpg" alt="Эльбрус">
                 <div class="element__group">
                     <h2 class="element__text">Гора Эльбрус</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__text">Домбай</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
                 <div class="element__group">
                     <h2 class="element__text">Карачаево-Черкесия</h2>
-                    <button type="button" class="element__button"></button>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
                 </div>
             </div>
         </section>
@@ -78,12 +78,12 @@
     <div class="popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form action="#" name="profile-form">
+            <form action="#" name="profile-form" class="popup__form">
                 <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="popup-name">
                 <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job" name="popup-job">
                 <button type="submit" class="popup__button">Сохранить</button>
             </form>
-            <button type="button" class="popup__close"></button>
+            <button type="button" class="popup__close" aria-label="Закрыть"></button>
         </div>
     </div>
     <script src="./scripts/index.js"></script>
