--- a/index.html
+++ b/index.html
@@ -25,49 +25,20 @@
             <button type="button" class="profile__add-button" aria-label="Добавить фотографии"></button>
         </section>
         <section class="elements">
-            <div class="element">
-                <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
-                <div class="element__group">
-                    <h2 class="element__text">Карачаевск</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
-                <div class="element__group">
-                    <h2 class="element__text">Гора Эльбрус</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-                <div class="element__group">
-                    <h2 class="element__text">Домбай</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/elbrus.jpg" alt="Эльбрус">
-                <div class="element__group">
-                    <h2 class="element__text">Гора Эльбрус</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-                <div class="element__group">
-                    <h2 class="element__text">Домбай</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
-                <div class="element__group">
-                    <h2 class="element__text">Карачаево-Черкесия</h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
-                </div>
-            </div>
+
         </section>
+        <template class="elements-template">
+            <div class="element">
+                <img class="element__image">
+                <div class="element__group">
+                    <h2 class="element__text">
+
+                    </h2>
+                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
+                </div>
+                <button type="button" class="element__button-close" aria-label="Удалить картинку"></button>
+            </div>
+        </template>
 
     </main>
     <footer class="footer">
@@ -84,6 +55,30 @@
             </form>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
         </div>
+    </div>
+
+    <div class="popup-two">
+        <div class="popup-two__container">
+            <h2 class="popup-two__title">Редактировать профиль</h2>
+            <form action="#" name="profile-form" class="popup-two__form">
+                <input type="text" placeholder="Название" class="popup-two__input popup-two__input_type_text"
+                    name="popup-text">
+                <input type="text" placeholder="Ссылка на картинку"
+                    class="popup-two__input popup-two__input_type_sourse" name="popup-sourse">
+                <button type="submit" class="popup-two__button">Создать</button>
+            </form>
+            <button type="button" class="popup-two__close" aria-label="Закрыть"></button>
+        </div>
+    </div>
+
+    <div class="popup-img">
+        <div class="popup-img__container">
+            <img class="popup-img__image" src="#" alt="#">
+            <p class="popup-img__text"></p>
+            <button type="button" class="popup-img__button" aria-label="Закрыть"></button>
+
+        </div>
+
     </div>
     <script src="./scripts/index.js"></script>
 </body>
