2 отправка на ревью

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="popup popup_type_image">
         <div class="popup__element">
-            <img class="popup__image" alt="#">
+            <img class="popup__image" src="#" alt="#">
             <p class="popup__text"></p>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
 
