--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
 
     </div>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
