--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <!--<link rel="stylesheet" href="./pages/index.css">-->
 </head>
 
 <body class="page">
     <header class="header">
-        <img src="./images/header__image.svg" class="header__logo" alt="Логотип">
+        <img src="<%=require('./images/header__image.svg')%>" class="header__logo" alt="Логотип">
     </header>
     <main class="content">
         <section class="profile">
-            <img src="./images/profile__image.jpg" class="profile__avatar" alt="Фотография пользователя">
+            <img src="<%=require('./images/profile__image.jpg')%>" class="profile__avatar"
+                alt="Фотография пользователя">
             <div class="profile__info">
                 <div class="profile__name">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -94,8 +95,7 @@
         </div>
 
     </div>
-    <!--<script type='module' src="./scripts/validate.js"></script>-->
-    <script type='module' src="./scripts/index.js"></script>
+    <!--<script type='module' src="./pages/index.js"></script>-->
 </body>
 
 </html>
