--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,13 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form action="#" name="profile-form" class="popup__form popup__form_type_one" novalidate>
                 <div class="popup__label">
-                    <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="popup-name"
+                    <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="name"
                         id="name-input" minlength="2" maxlength="40" required>
                     <span class="popup__text-error name-input-error"></span>
                 </div>
                 <div class="popup__label">
-                    <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job"
-                        name="popup-job" id="job-input" minlength="2" maxlength="200" required>
+                    <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job" name="job"
+                        id="job-input" minlength="2" maxlength="200" required>
                     <span class="popup__text-error job-input-error"></span>
                 </div>
                 <button type="submit" class="popup__button">Сохранить</button>
@@ -70,13 +70,13 @@
             <h2 class="popup__title">Новое место</h2>
             <form action="#" name="element-form" class="popup__form popup__form_type_two" novalidate>
                 <div class="popup__label">
-                    <input type="text" placeholder="Название" class="popup__input popup__input_type_text"
-                        name="popup-text" id="text-input" minlength="2" maxlength="30" required>
+                    <input type="text" placeholder="Название" class="popup__input popup__input_type_text" name="name"
+                        id="text-input" minlength="2" maxlength="30" required>
                     <span class="popup__text-error text-input-error"></span>
                 </div>
                 <div class="popup__label">
                     <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_sourse"
-                        name="popup-sourse" id="url-input" required>
+                        name="link" id="url-input" required>
                     <span class="popup__text-error url-input-error"></span>
                 </div>
                 <button type="submit" class="popup__button">Создать</button>
