--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,12 @@
     </header>
     <main class="content">
         <section class="profile">
-            <img src="<%=require('./images/profile__image.jpg')%>" class="profile__avatar"
-                alt="Фотография пользователя">
+            <div class="profile__avatar-container">
+                <img src="<%=require('./images/profile__image.jpg')%>" class="profile__avatar"
+                    alt="Фотография пользователя">
+                <button type="button" class="profile__avatar-button" aria-label="Редактировать аватар"></button>
+            </div>
+
             <div class="profile__info">
                 <div class="profile__name">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -32,9 +36,11 @@
                 <img class="element__image" alt="#">
                 <div class="element__group">
                     <h2 class="element__text">
-
                     </h2>
-                    <button type="button" class="element__button" aria-label="Поставить лайк"></button>
+                    <div class="element__likes">
+                        <button type="button" class="element__button" aria-label="Поставить лайк"></button>
+                        <span class="element__count">0</span>
+                    </div>
                 </div>
                 <button type="button" class="element__button-close" aria-label="Удалить картинку"></button>
             </div>
@@ -90,9 +96,30 @@
             <img class="popup__image" src="#" alt="#">
             <p class="popup__text"></p>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
-
         </div>
+    </div>
 
+    <div class="popup popup_type_confirm">
+        <div class="popup__container">
+            <h2 class="popup__title">Вы уверены?</h2>
+            <button type="submit" class="popup__button">Да</button>
+            <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        </div>
+    </div>
+
+    <div class="popup popup_type_avatar">
+        <div class="popup__container">
+            <h2 class="popup__title">Обновить аватар</h2>
+            <form action="#" name="avatar-form" class="popup__form popup__form_type_three" novalidate>
+                <div class="popup__label">
+                    <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_name"
+                        name="link" id="url-input" required>
+                    <span class="popup__text-error url-input-error"></span>
+                </div>
+                <button type="submit" class="popup__button">Сохранить</button>
+            </form>
+            <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        </div>
     </div>
     <!--<script type='module' src="./pages/index.js"></script>-->
 </body>
