--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     <span class="popup__text-error name-input-error"></span>
                 </div>
                 <div class="popup__label">
-                    <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job" name="job"
+                    <input type="text" placeholder="Профессия" class="popup__input popup__input_type_job" name="about"
                         id="job-input" minlength="2" maxlength="200" required>
                     <span class="popup__text-error job-input-error"></span>
                 </div>
@@ -113,7 +113,7 @@
             <form action="#" name="avatar-form" class="popup__form popup__form_type_three" novalidate>
                 <div class="popup__label">
                     <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_name"
-                        name="link" id="url-input" required>
+                        name="avatar" id="url-input" required>
                     <span class="popup__text-error url-input-error"></span>
                 </div>
                 <button type="submit" class="popup__button">Сохранить</button>
