изменила id для поп апа аватара

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             <form action="#" name="avatar-form" class="popup__form popup__form_type_three" novalidate>
                 <div class="popup__label">
                     <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_name"
-                        name="avatar" id="url-input" required>
+                        name="avatar" id="avatar-input" required>
                     <span class="popup__text-error url-input-error"></span>
                 </div>
                 <button type="submit" class="popup__button">Сохранить</button>
